--- a/public/partials/userDetails.html
+++ b/public/partials/userDetails.html
@@ -1,5 +1,5 @@
 <div class="list" ng-controller='UserDetailController'>
-  {{errorMes}}
+  <!-- {{errorMes}} -->
   <div class="row">
     <h2>Name: {{user.name}}</h2>
     <h4>Email: {{user.email}}</h4>
@@ -12,7 +12,7 @@
   </div>
 
   <div class="row" ng-repeat="task in tasks">
-    <div class="small-4 columns"><a href="#/taskdetailview/{{task._id}}">{{task.name}}</a></div>
+    <div class="small-4 columns"><a href="#/taskDetails/{{task._id}}">{{task.name}}</a></div>
     <div class="small-4 columns">{{task.description}}</div>
     <div class="small-4 columns"><button class="button tiny" ng-click="completeTask($index, task._id)">Complete</button></div>
   </div>
@@ -20,7 +20,7 @@
   <div class="row"><button class="button default" ng-click="loadCompleted()">Load Completed</button></div>
 
   <div class="row" ng-repeat="task in completedTasks">
-    <div class="small-4 columns"><a href="#/taskdetailview/{{task._id}}">{{task.name}}</a></div>
+    <div class="small-4 columns"><a href="#/taskDetails/{{task._id}}">{{task.name}}</a></div>
     <div class="small-4 columns">{{task.description}}</div>
     <div class="small-4 columns"><button class="button tiny" ng-click="completeTask(task._id)">Complete</button></div>
   </div>
