--- a/public/partials/userlist.html
+++ b/public/partials/userlist.html
@@ -16,7 +16,8 @@
   </div>
   <div class="row user-row" ng-repeat="user in users"> <!-- | limitTo:20"> -->
     <div class="small-2 columns">
-      <a href="#/userlist/{{user._id}}" ng-bind="user.name"></a>
+      <!-- <a href="#/userlist/{{user._id}}" ng-bind="user.name"></a> -->
+    <a href="#/userlist/{{user._id}}"><div class="user-name">{{user.name}}</div></a>
     </div>
     <div class="small-5 columns">
       <a href="#/userlist/{{user._id}}" ng-bind="user._id"></a>
@@ -24,14 +25,14 @@
     <div class="small-5 columns">
       <button ng-click="deleteUser($index, user._id)" class="button tiny alert">Delete User</button>
     </div>
+    <!-- <a href="#/userlist/{{user._id}}"><div class="user-name">{{user.name}}</div></a> -->
   </div>
 
   <!-- <div class="row">
     <button class="button default" ng-click="prevPage()">Prev</button>
     <button class="button default" ng-click="nextPage()">Next</button>
   </div> -->
-
-</div>
+ </div>
 
 
 
