--- a/public/partials/taskDetails.html
+++ b/public/partials/taskDetails.html
@@ -1,20 +1,15 @@
 <div class="list" ng-controller='TaskDetailController'>
-  {{errorMes}}
+  <!-- {{errorMes}} -->
   <div class="row">
-    <h1>{{task.name}}</h1>
-    <h2>{{task.description}}</h2>
-    <h3>{{task.completed}}</h3>
-    <h3>{{task.deadline}}</h3>
-    <h3>{{task.assignedUserName}}</h3>
-    <h3>{{task.dateCreated}}</h3>
+    <h1>Task Name: {{task.name}}</h1>
+    <h3>Task Decription: {{task.description}}</h3>
+    <h4>Status of Completion: {{task.completed}}</h4>
+    <h4>Deadline: {{task.deadline}}</h4>
+    <h4>Assigned Person: {{task.assignedUserName}}</h4>
+    <h4>Date Created: {{task.dateCreated}}</h4>
 
     <br />
     <a href="#/edittask/{{task._id}}" class="button default">Edit Task</a>
-
-    <form>
-      <input ng-model="taskComplete" ng-value="true" type="radio"> Completed
-      <input ng-model="taskComplete" ng-value="false" type="radio"> Pending
-    </form>
 
     <br />
     <a href="#/tasklist" class="button default">Back to Task View</a>
