--- a/public/partials/edittask.html
+++ b/public/partials/edittask.html
@@ -13,6 +13,11 @@
           <select ng-model="selectedUser" />
             <option ng-repeat="user in users" value="{{$index}}">{{user.name}}</option>
           </select>
+          <!-- Status of Completion:
+          <select ng-model="selectedUser" />
+            <option value="false"></option>
+            <option value="true"></option>
+          </select> -->
         </div>
     </div>
 
