--- a/public/partials/userlist.html
+++ b/public/partials/userlist.html
@@ -1,11 +1,11 @@
 <div class="list" ng-controller='UsersController'>
   {{errorMes}}
   <div class="row">
-    Users
-    <br />
+  <center> 
+    <h1> Users </h1>
     <a href="#/addUserView" class="button default">Add User</a>
+  </center>
   </div>
-
   <div class="row">
     <div class="small-2 columns">
       Name
@@ -14,9 +14,8 @@
       ID
     </div>
   </div>
-  <div class="row user-row" ng-repeat="user in users"> <!-- | limitTo:20"> -->
+  <div class="row user-row" ng-repeat="user in users"> 
     <div class="small-2 columns">
-      <!-- <a href="#/userlist/{{user._id}}" ng-bind="user.name"></a> -->
     <a href="#/userlist/{{user._id}}"><div class="user-name">{{user.name}}</div></a>
     </div>
     <div class="small-5 columns">
@@ -26,7 +25,6 @@
       <button ng-click="deleteUser($index, user._id)" class="button tiny alert">Delete User</button>
     </div>
   </div>
-
  </div>
 
 
